--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.19.0
   riverpod_annotation: ^2.3.5
   supabase_flutter: ^2.12.0
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
