--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   supabase_flutter: ^2.12.0
   timeago: ^3.7.1
+  country_code_picker: ^3.4.1
 
 dev_dependencies:
   flutter_test:
