--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   supabase_flutter: ^2.12.0
   timeago: ^3.7.1
   country_code_picker: ^3.4.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
