--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,2 +1,6 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:ReservedCodeCacheSize=256m
+org.gradle.jvmargs=-Xmx768m -XX:MaxMetaspaceSize=256m -XX:ReservedCodeCacheSize=128m
+org.gradle.parallel=false
+org.gradle.vfs.watch=false
+org.gradle.daemon=false
+kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=160m -XX:-UseParallelGC
 android.useAndroidX=true
