--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   country_code_picker: ^3.4.1
   shared_preferences: ^2.5.4
   image_picker: ^1.2.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
