--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   image_picker: ^1.2.1
   fl_chart: ^1.1.1
   flutter_local_notifications: ^20.1.0
+  firebase_core: ^3.12.1
+  firebase_messaging: ^15.2.4
 
 dev_dependencies:
   flutter_test:
